# test-small-integers

./: CMakeLists.txt
src/: SmallInteger.h  SmallIntegerBench.cpp  SmallIntegerTest.cpp
